Contrast Fix

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -39,6 +39,7 @@ tr {
 
 .primary {
   background-color: var(--primary-color);
+  color:white;
 }
 .secondary {
   background-color: var(--secondary-color);
